# chatgpt_cli

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: ai.rs  client.rs  file.rs  main.rs
