[package]
name = "chatgpt_cli"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.15", features = ["full"] }
chatgpt_rs = { version = "1.1.11", features = ["streams"] }
dirs = "3.0.2"
futures-util = "0.3"
futures = "0.3"
shellexpand = "1.0"

[[bin]]
name = "chatgpt_cli"
path = "src/main.rs"
