[package]
name = "chatgpt_cli"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.15", features = ["full"] }
chatgpt_rs = { version = "1.2.3", features = ["streams"] }
dirs = "5.0.1"
futures-util = "0.3.30"
futures = "0.3"
shellexpand = "3.1.0"

[[bin]]
name = "chatgpt_cli"
path = "src/main.rs"
